fix: prevent overflow from cropping content (#2558)
ref: MANAGER-4737

--- a/packages/manager/apps/hub/src/dashboard/dashboard.scss
+++ b/packages/manager/apps/hub/src/dashboard/dashboard.scss
@@ -3,7 +3,7 @@ hub-dashboard {
     background-color: #f5feff;
     color: #4d5592;
     position: absolute;
-    top: 44px;
+    top: 0;
     left: 0;
     width: 100%;
     z-index: 1;
